--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+            title>Vite App</title>
         </head>
-  <body>
+             <body>
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
