--- a/index.html
+++ b/index.html
@@ -2,12 +2,52 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://www.svgrepo.com/show/452045/js.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ITMO_WebDev_2023</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
+    <p>Welcome to ITMO_WebDev_2023</p>
+    <header>Header <span>Linear</span></header>
+    <main>
+      <aside>Aside</aside>
+      <section>
+        <article>
+          <ol>
+            <li>First</li>
+            <li>Second</li>
+            <li>Third</li>
+          </ol>
+          <h1>Header 1</h1>
+          <h2>Header 2</h2>
+          <table>
+            <tr>
+              <td>12</td>
+              <td>13</td>
+              <td>14</td>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td>2</td>
+              <td>3</td>
+            </tr>
+          </table>
+
+          <form onsubmit="return false"><input type="button" value="BUTTON" /></form>
+
+          <div>
+            <label for="firstname">First name:</label>
+            <input type="text" id="firstname" size="action" />
+          </div>
+          <div>
+            <label for="lastname">Last name:</label>
+            <input type="text" id="lastname" name="LastName" />
+          </div>
+          <div id="result">Result</div>
+          <div><button onsubmit="false">Send</button></div>
+        </article>
+      </section>
+    </main>
+    <footer>Footer</footer>
   </body>
 </html>
