--- a/index.html
+++ b/index.html
@@ -4,50 +4,158 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://www.svgrepo.com/show/452045/js.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ITMO_WebDev_2023</title>
+    <title>ITMO_WebDev_2023_homework/homework-1-html-intro</title>
   </head>
   <body>
-    <p>Welcome to ITMO_WebDev_2023</p>
-    <header>Header <span>Linear</span></header>
-    <main>
-      <aside>Aside</aside>
-      <section>
-        <article>
+    <div class="main">
+      <div class="container">
+        <h1>Task number 1</h1>
+        <section>
+          <p>Заголовки</p>
+          <h1>Заголовок первого уровня</h1>
+          <h2>Заголовок второго уровня</h2>
+          <h3>Заголовок третьего уровня</h3>
+          <h4>Заголовок четвертого уровня</h4>
+          <h5>Заголовок пятого уровня</h5>
+          <h6>Заголовок шестого уровня</h6>
+        </section>
+      </div>
+    </div>
+    <div class="main">
+      <div class="container">
+        <h1>Task number 2</h1>
+        <section>
+          <p>Параграфы</p>
+          <p>
+            <strong>Важный фрагмент текста</strong>
+            <em>Акцентированный фрагмент</em>
+            <mark>Подсвеченный фрагмент</mark>
+            <b>Текст жирным шрифтом</b>
+            <i>Текст курсивом</i>
+            <s>Перечеркнутый текст</s>
+            <small>Текст меньшего размера</small>
+            <sub>Текст нижнего индекса</sub>
+            <sup>Текст верхнего индекса</sup>
+          </p>
+        </section>
+      </div>
+    </div>
+    <div class="main2">
+      <div class="container3">
+        <h3>Task number 3</h3>
+        <small
+          ><ul>
+            <li>Список 1</li>
+            <li>Список 1</li>
+            <li>Список 1</li>
+          </ul>
           <ol>
-            <li>First</li>
-            <li>Second</li>
-            <li>Third</li>
-          </ol>
-          <h1>Header 1</h1>
-          <h2>Header 2</h2>
+            <li>Список 2</li>
+            <li>Список 2</li>
+            <li>Список 2</li>
+          </ol></small
+        >
+        <form>
+          <label>Поле для ввода</label>
+          <input type="text" placeholder="Ввод текста" />
+        </form>
+        <form>
+          <label for="pin">Введите пинкод</label>
+          <input type="password" id="pin" placeholder="1234" />
+        </form>
+        <form>
+          <label for="email">Введите E-mail</label>
+          <input type="email" id="email" placeholder="your-email@gmail.com" />
+        </form>
+        <form>
+          <label for="date">Дата рождения: </label> <input type="date" id="date" name="date" />
+        </form>
+
+        <form>
+          <input id="homework-1-html-intro" type="checkbox" />
+          <label for="homework-1-html-intro">Checkbox</label>
+        </form>
+        <form>
+          <label>
+            <input type="radio" name="homework-1-html-intro" value="yes" />
+            Радиокнопка для выбора "Да"
+          </label>
+          <br />
+          <label>
+            <input type="radio" name="homework-1-html-intro" value="no" />
+            Радиокнопка для выбора "Нет"
+          </label>
+        </form>
+        <script>
+          function buttonClick() {
+            var elem = document.getElementById('elem');
+            elem.innerHTML = 'Вы нажали на <b>кнопку</b>';
+          }
+        </script>
+        <input type="button" value="Нажми на кнопку" onclick="buttonClick()" />
+        <span id="elem"></span>
+
+        <h3>Task number 4</h3>
+        <section>
           <table>
-            <tr>
-              <td>12</td>
-              <td>13</td>
-              <td>14</td>
-            </tr>
-            <tr>
-              <td>1</td>
-              <td>2</td>
-              <td>3</td>
-            </tr>
+            <caption>
+              Таблица
+            </caption>
+            <colgroup style="background-color: #0486c3">
+              <col />
+              <col style="background-color: #d79403" />
+              <col />
+            </colgroup>
+            <thead>
+              <tr>
+                <th colspan="2">Объединение строк 1</th>
+                <th>Строка 2</th>
+                <th>Строка 3</th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <tr>
+                <td>Столбец 2</td>
+                <td>Строка 2</td>
+                <td>Строка 3</td>
+                <td>Строка 4</td>
+              </tr>
+            </tbody>
+
+            <tbody>
+              <tr>
+                <td>Столбец 3</td>
+                <td>Строка 2</td>
+                <td>Строка 3</td>
+                <td>Строка 4</td>
+              </tr>
+            </tbody>
           </table>
+        </section>
+      </div>
+    </div>
+    <div class="main">
+      <div class="container">
+        <h3>Task number 5</h3>
+        <label>Выберите пункт:</label
+        ><select>
+          <optgroup label="Заголовок списка">
+            <option>Пункт 1</option>
+            <option>Пункт 2</option>
+            <option>Пункт 3</option>
+            <option>Пункт 4</option>
+            <option>Пункт 5</option>
+          </optgroup>
+        </select>
 
-          <form onsubmit="return false"><input type="button" value="BUTTON" /></form>
-
-          <div>
-            <label for="firstname">First name:</label>
-            <input type="text" id="firstname" size="action" />
-          </div>
-          <div>
-            <label for="lastname">Last name:</label>
-            <input type="text" id="lastname" name="LastName" />
-          </div>
-          <div id="result">Result</div>
-          <div><button onsubmit="false">Send</button></div>
-        </article>
-      </section>
-    </main>
-    <footer>Footer</footer>
+        <h3>Task number 6</h3>
+        <h3>PNG</h3>
+        <img src="img/picture.png" width="100" height="100" />
+        <h3>SVG</h3>
+        <object type="image/svg+xml" data="img/picture.svg" width="100" height="100"></object>
+      </div>
+    </div>
+    <link rel="stylesheet" href="style.css" />
   </body>
 </html>
