Correction of impressions in index.html

--- a/index.html
+++ b/index.html
@@ -10,51 +10,47 @@
     <div class="main">
       <div class="container">
         <h1>Task number 1</h1>
-        <section>
-          <p>Заголовки</p>
-          <h1>Заголовок первого уровня</h1>
-          <h2>Заголовок второго уровня</h2>
-          <h3>Заголовок третьего уровня</h3>
-          <h4>Заголовок четвертого уровня</h4>
-          <h5>Заголовок пятого уровня</h5>
-          <h6>Заголовок шестого уровня</h6>
-        </section>
+
+        <p>Заголовки</p>
+        <h1>Заголовок первого уровня</h1>
+        <h2>Заголовок второго уровня</h2>
+        <h3>Заголовок третьего уровня</h3>
+        <h4>Заголовок четвертого уровня</h4>
+        <h5>Заголовок пятого уровня</h5>
+        <h6>Заголовок шестого уровня</h6>
       </div>
     </div>
     <div class="main">
       <div class="container">
         <h1>Task number 2</h1>
-        <section>
-          <p>Параграфы</p>
-          <p>
-            <strong>Важный фрагмент текста</strong>
-            <em>Акцентированный фрагмент</em>
-            <mark>Подсвеченный фрагмент</mark>
-            <b>Текст жирным шрифтом</b>
-            <i>Текст курсивом</i>
-            <s>Перечеркнутый текст</s>
-            <small>Текст меньшего размера</small>
-            <sub>Текст нижнего индекса</sub>
-            <sup>Текст верхнего индекса</sup>
-          </p>
-        </section>
+
+        <p>Параграфы</p>
+        <p>
+          <strong>Важный фрагмент текста</strong>
+          <em>Акцентированный фрагмент</em>
+          <mark>Подсвеченный фрагмент</mark>
+          <b>Текст жирным шрифтом</b>
+          <i>Текст курсивом</i>
+          <s>Перечеркнутый текст</s>
+          <small>Текст меньшего размера</small>
+          <sub>Текст нижнего индекса</sub>
+          <sup>Текст верхнего индекса</sup>
+        </p>
       </div>
     </div>
     <div class="main2">
       <div class="container3">
         <h3>Task number 3</h3>
-        <small
-          ><ul>
-            <li>Список 1</li>
-            <li>Список 1</li>
-            <li>Список 1</li>
-          </ul>
-          <ol>
-            <li>Список 2</li>
-            <li>Список 2</li>
-            <li>Список 2</li>
-          </ol></small
-        >
+        <ul>
+          <li>Список 1</li>
+          <li>Список 1</li>
+          <li>Список 1</li>
+        </ul>
+        <ol>
+          <li>Список 2</li>
+          <li>Список 2</li>
+          <li>Список 2</li>
+        </ol>
         <form>
           <label>Поле для ввода</label>
           <input type="text" placeholder="Ввод текста" />
@@ -96,43 +92,39 @@
         <span id="elem"></span>
 
         <h3>Task number 4</h3>
-        <section>
-          <table>
-            <caption>
-              Таблица
-            </caption>
-            <colgroup style="background-color: #0486c3">
-              <col />
-              <col style="background-color: #d79403" />
-              <col />
-            </colgroup>
-            <thead>
-              <tr>
-                <th colspan="2">Объединение строк 1</th>
-                <th>Строка 2</th>
-                <th>Строка 3</th>
-              </tr>
-            </thead>
 
-            <tbody>
-              <tr>
-                <td>Столбец 2</td>
-                <td>Строка 2</td>
-                <td>Строка 3</td>
-                <td>Строка 4</td>
-              </tr>
-            </tbody>
+        <table>
+          <caption>
+            Таблица
+          </caption>
+          <colgroup style="background-color: #0486c3">
+            <col />
+            <col style="background-color: #d79403" />
+            <col />
+          </colgroup>
+          <thead>
+            <tr>
+              <th colspan="2">Объединение строк 1</th>
+              <th>Строка 2</th>
+            </tr>
+          </thead>
 
-            <tbody>
-              <tr>
-                <td>Столбец 3</td>
-                <td>Строка 2</td>
-                <td>Строка 3</td>
-                <td>Строка 4</td>
-              </tr>
-            </tbody>
-          </table>
-        </section>
+          <tbody>
+            <tr>
+              <td>Столбец 2</td>
+              <td>Строка 2</td>
+              <td>Строка 3</td>
+            </tr>
+          </tbody>
+
+          <tbody>
+            <tr>
+              <td>Столбец 3</td>
+              <td>Строка 2</td>
+              <td>Строка 3</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
     <div class="main">
@@ -151,7 +143,7 @@
 
         <h3>Task number 6</h3>
         <h3>PNG</h3>
-        <img src="img/picture.png" width="100" height="100" />
+        <img src="img/picture.png" alt="img" width="100" height="100" />
         <h3>SVG</h3>
         <object type="image/svg+xml" data="img/picture.svg" width="100" height="100"></object>
       </div>
