--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ITMO_WebDev_2023_lesson-3-css-basic-card</title>
-    <link rel="stylesheet" href="public/reset.css" />
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
     <link href="/dist/output.css" rel="stylesheet" />
   </head>
@@ -24,8 +24,8 @@
           for the House of CHANEL.
         </p>
         <div class="lesson_details">
-          <p class="lesson_detail">$149.99</p>
-          <p class="lesson_detail"><s>$169.99</s></p>
+          <p class="lesson_price">$149.99</p>
+          <p class="lesson_price"><s>$169.99</s></p>
         </div>
         <div class="button">
           <a href="#"><img src="img/cart.png" alt="" height="12px" width="12px" /> Add To Card</a>
