--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
           for the House of CHANEL.
         </p>
         <div class="lesson_details">
-          <p class="lesson_price">$149.99</p>
-          <p class="lesson_price"><s>$169.99</s></p>
+          <p class="new_price">$149.99</p>
+          <p class="old_price"><s>$169.99</s></p>
         </div>
         <div class="button">
           <a href="#"><img src="img/cart.png" alt="" height="12px" width="12px" /> Add To Card</a>
