--- a/index.html
+++ b/index.html
@@ -4,33 +4,65 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ITMO_WebDev_2023_lesson-3-css-basic-card</title>
-    <link rel="stylesheet" href="reset.css" />
+    <title>Tailwindcss landing</title>
     <link rel="stylesheet" href="style.css" />
-    <link href="/dist/output.css" rel="stylesheet" />
   </head>
-  <body>
-    <figure class="container">
-      <div class="img_hero">
-        <img src="img/image-product-desktop.jpg" alt="lesson" class="img_left" />
-      </div>
-      <div class="content">
-        <h1 class="head_category">PERFUME</h1>
-        <div class="lesson_title">
-          <h1 class="heading">Gabrielle Essence Eau De Parfum</h1>
-        </div>
-        <p class="lesson_description">
-          A floral, solar and voluptuous interpretation composed by Olivier Polge, Perfumer-Creator
-          for the House of CHANEL.
-        </p>
-        <div class="lesson_details">
-          <p class="lesson_price">$149.99</p>
-          <p class="lesson_price"><s>$169.99</s></p>
-        </div>
-        <div class="button">
-          <a href="#"><img src="img/cart.png" alt="" height="12px" width="12px" /> Add To Card</a>
+  <body class="flex h-screen flex-row justify-center items-center bg-gray-200">
+    <div class="w-56 p-4 bg-white rounded-xl">
+      <div class="flex flex-col">
+        <div class="flex flex-row justify-between">
+          <div>
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24">
+              <path
+                fill="red"
+                d="m10 15l5.19-3L10 9v6m11.56-7.83c.13.47.22 1.1.28 1.9c.07.8.1 1.49.1 2.09L22 12c0 2.19-.16 3.8-.44 4.83c-.25.9-.83 1.48-1.73 1.73c-.47.13-1.33.22-2.65.28c-1.3.07-2.49.1-3.59.1L12 19c-4.19 0-6.8-.16-7.83-.44c-.9-.25-1.48-.83-1.73-1.73c-.13-.47-.22-1.1-.28-1.9c-.07-.8-.1-1.49-.1-2.09L2 12c0-2.19.16-3.8.44-4.83c.25-.9.83-1.48 1.73-1.73c.47-.13 1.33-.22 2.65-.28c1.3-.07 2.49-.1 3.59-.1L12 5c4.19 0 6.8.16 7.83.44c.9.25 1.48.83 1.73 1.73Z"
+              />
+            </svg>
+          </div>
+          <div class="">Free</div>
         </div>
       </div>
-    </figure>
+      <div class="flex flex-col">
+        <div class="flex flex-row justify-between">
+          <div>Videos</div>
+        </div>
+      </div>
+      <div class="flex flex-col">
+        <div
+          class="flex flex-row justify-between"
+          style="background-color: rgba(254, 226, 254, 0.757)"
+        >
+          <div>YouTube</div>
+        </div>
+      </div>
+      <div
+        class="flex flex-row justify-between"
+        style="background-color: rgba(209, 232, 250, 0.757)"
+      >
+        <div class="flex flex-col">
+          <div>Rating</div>
+          <div>5.0</div>
+        </div>
+        <div class="flex flex-col">
+          <div>Size</div>
+          <div>246</div>
+        </div>
+        <div class="flex flex-col">
+          <div>Download</div>
+          <div>5m</div>
+        </div>
+      </div>
+      <div class="flex flex-col">
+        <div
+          class="flex flex-row justify-between"
+          style="background-color: rgba(252, 243, 219, 0.757)"
+        >
+          <div>icon</div>
+          <div class="flex flex-col">
+            <div>30 Mb / Sec</div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
