--- a/index.html
+++ b/index.html
@@ -1,81 +1,95 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru_RU">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tailwindcss Website</title>
+    <title>News homepage</title>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@500;700&display=swap');
-
       @tailwind base;
       @tailwind components;
       @tailwind utilities;
 
-      body * {
-        font-family: 'Epilogue', sans-serif;
+      .attribution {
+        font-size: 11px;
+        text-align: center;
       }
-
-      @layer components {
-        .btn-register {
-          @apply border-2 border-gray-500 rounded-lg px-3 py-1.5;
-        }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
       }
     </style>
   </head>
-  <body class="flex flex-col h-screen bg-amber-100/50">
-    <div class="flex flex-col">
-      <header
-        class="flex flex-row justify-between items-center px-6 py-4 font-bold text-neutral-500"
-        style="background-color: #f0f1"
-      >
-        <div class="flex flex-row gap-x-8 items-center">
-          <img class="relative top-1" src="public/logo.svg" alt="logo" />
-          <nav class="flex flex-row gap-x-6 items-center">
-            <div class="flex flex-row gap-x-2 items-center hover:text-black">
-              <div>Features</div>
-              <img src="/public/icon-arrow-down.svg" alt="icon" />
-            </div>
-            <div class="hover:text-black">Company</div>
-            <div class="hover:text-black">Careers</div>
-            <div class="hover:text-black">About</div>
-          </nav>
-        </div>
-        <div class="flex flex-row gap-x-4 items-center">
-          <div>Login</div>
-          <div class="btn-register">Register</div>
-        </div>
-      </header>
-      <main class="flex flex-row h-screen" style="background-color: rgba(0, 225, 255, 0.171)">
-        <div class="flex flex-row">
-          <div
-            class="flex flex-col w-1/2 justify-between"
-            style="background-color: rgba(255, 0, 111, 0.306)"
-          >
-            <div class="flex h-full flex-row">
-              <div class="flex flex-col gap-y-6 justify-center">
-                <div>Make remote work</div>
-                <div>
-                  Get your team in sync, no matter your location. Streamline processes, create team
-                  rituals, and watch productivity soar.
-                </div>
+  <body class="flex flex-col h-screen">
+    <!-------Menu------>
+    <header class="flex flex-row justify-between items-center px-6 py-4 font-bold text-neutral-500">
+      <img src="public/logo.svg" alt="logo" />
+      <nav class="flex flex-row items-center gap-x-6 text-sm">
+        <div>Home</div>
+        <div>New</div>
+        <div>Popular</div>
+        <div>Trending</div>
+        <div>Categories</div>
+      </nav>
+    </header>
+    <!-----Picture----->
+    <div class="flex flex-row justify-center items-stretch">
+      <div class="flex flex-col items-baseline">
+        <img class="w-full h-full object-contain" src="public/image-web-3-desktop.jpg" alt="img" />
+        <!--------main----->
 
-                <div class="flex flex-row">Learn more</div>
-              </div>
-            </div>
-            <div class="flex flex-row" style="background-color: rgba(255, 0, 157, 0.415)">icon</div>
-          </div>
-          <div class="flex flex-col w-1/2" style="background-color: rgba(0, 255, 170, 0.067)">
-            <div class="h-full overflow-hidden">
-              <img
-                class="w-full h-full object-contain"
-                src="./public/image-hero-desktop.png"
-                alt=""
-              />
+        <div class="flex flex-row items-center">
+          <div class="p-4 text-4xl font-bold">The Bright Future of Web 3.0?</div>
+          <div class="flex flex-col gap-y-5">
+            We dive into the next evolution of the web that claims to put the power of the platforms
+            back into the hands of the people. But is it really fulfilling its promise?
+            <div class="border-none bg-red-500 rounded-lg px-3 py-1.5 hover:text-black;">
+              Read more
             </div>
           </div>
         </div>
-      </main>
+      </div>
+      <!-----Block NEWS---->
+      <div class="flex flex-col border bg-gray-600 px-3 py-5">
+        <div class="text-2xl font-bold">New</div>
+        <div class="font-bold">Hydrogen VS Electric Cars</div>
+        <div class="text-sm">Will hydrogen-fueled cars ever catch up to EVs?</div>
+        <div class="font-bold">The Downsides of AI Artistry</div>
+        <div class="text-sm">
+          What are the possible adverse effects of on-demand AI image generation?
+        </div>
+        <div class="font-bold">Is VC Funding Drying Up?</div>
+        <div class="text-sm">
+          Private funding by VC firms is down 50% YOY. We take a look at what that means.
+        </div>
+      </div>
+    </div>
+
+    <!-------LowBlockNews------->
+    <div class="flex flex-row border bg-gray-600 px-3 py-5">
+      <div class="flex flex-row border bg-gray-600 px-3 py-5">
+        <img class="w-1/2 object-contain" src="public/image-retro-pcs.jpg" alt="retro" />
+        <div class="flex flex-col">
+          <div>01</div>
+          <div>Reviving Retro PCs</div>
+          <div class="animate-pulse">What happens when old PCs are given modern upgrades?</div>
+        </div>
+      </div>
+      <div class="flex flex-row border bg-gray-600 px-3 py-5">
+        <img class="w-1/2 object-contain" src="public/image-top-laptops.jpg" alt="retro" />
+        <div class="flex flex-col">
+          <div>02</div>
+          <div>Top 10 Laptops of 2022</div>
+          <div>Our best picks for various needs and budgets.</div>
+        </div>
+      </div>
+      <div class="flex flex-row border bg-gray-600 px-3 py-5">
+        <img class="w-1/2 object-contain" src="public/image-gaming-growth.jpg" alt="retro" />
+        <div class="flex flex-col">
+          <div>03</div>
+          <div>The Growth of Gaming</div>
+          <div>How the pandemic has sparked fresh opportunities.</div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
