--- a/index.html
+++ b/index.html
@@ -5,13 +5,62 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>lesson 9</title>
+    <script src="https://code.iconify.design/3/3.1.0/iconify.min.js"></script>
     <style>
       @tailwind base;
       @tailwind components;
       @tailwind utilities;
     </style>
   </head>
-  <body>
-    <div class="font-bold text-2xl">hello world</div>
+  <body class="bg-teal-100/50 w-screen h-screen grid place-items-center p-12">
+    <div class="container flex flex-row w-full h-full bg-gray-200 rounded-3xl p-4">
+      <aside class="flex flex-col min-w-[144px]">
+        <div class="flex flex-row items-center gap-x-2 py-4">
+          <i class="iconify-inline text-teal-700 text-3xl" data-icon="ph:cube-focus-bold"> </i>
+          <span class="font-bold text-xl">Taski</span>
+        </div>
+      </aside>
+      <main class="flex flex-col rounded-2xl w-full bg-gray-50 px-4 pt-2 pb-4 gap-y-2">
+        <div class="flex flex-row justify-between items-center">
+          <div class="flex flex-col py-4">
+            <span class="text-lg font-bold">Team tasks</span>
+          </div>
+          <div class="flex flex-col">
+            <div class="flex flex-row items-center gap-x-8">
+              <span class="text-neutral-400">Search</span>
+              <button class="px-4 py-2 bg-teal-600 rounded-full">
+                <span class="text-white">+ Create Task</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="flex flex-row justify-between items-center">
+          <div class="flex flex-col py-4">
+            <span class="text-sm text-neutral-400">Filters</span>
+          </div>
+          <div class="flex flex-col">
+            <div class="flex flex-row items-center gap-x-8">
+              <span class="text-sm text-neutral-400">Sort by</span>
+              <span class="text-sm text-neutral-400">Group by: Status </span>
+            </div>
+          </div>
+        </div>
+        <div class="flex flex-row justify-between gap-x-4 h-full">
+          <div class="flex flex-col h-full w-1/3 bg-gray-200 rounded-xl">
+            <div class="flex flex-row justify-between items-center p-2">
+              <div class="flex flex-col items-center">
+                <span class="text-sm">To Do <span class="text-neutral-400">2</span></span>
+              </div>
+              <div class="flex flex-col items-center">
+                <i class="iconify-inline text-neutral-400 text-xl" data-icon="material-symbols:add">
+                </i>
+                <i class="iconify-inline text-neutral-400 text-xl" data-icon="mdi:dots-horizontal">
+                </i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
   </body>
 </html>
