--- a/index.html
+++ b/index.html
@@ -19,75 +19,77 @@
       }
     </style>
   </head>
-  <body class="flex flex-col h-screen">
+  <body class="flex flex-col h-full w-full p-20">
     <!-------Menu------>
-    <header class="flex flex-row justify-between items-center px-6 py-4 font-bold text-neutral-500">
+    <header class="flex flex-row justify-between items-center px-2 pb-12 text-neutral-500">
       <img src="public/logo.svg" alt="logo" />
-      <nav class="flex flex-row items-center gap-x-6 text-sm">
-        <div>Home</div>
-        <div>New</div>
-        <div>Popular</div>
-        <div>Trending</div>
-        <div>Categories</div>
+      <nav class="flex flex-row gap-x-6 text-sm">
+        <div class="hover:font-bold">Home</div>
+        <div class="hover:font-bold">New</div>
+        <div class="hover:font-bold">Popular</div>
+        <div class="hover:font-bold">Trending</div>
+        <div class="hover:font-bold">Categories</div>
       </nav>
     </header>
     <!-----Picture----->
-    <div class="flex flex-row justify-center items-stretch">
+    <div class="flex flex-row justify-center items-stretch gap-x-6">
       <div class="flex flex-col items-baseline">
-        <img class="w-full h-full object-contain" src="public/image-web-3-desktop.jpg" alt="img" />
+        <img class="w-full h-full" src="public/image-web-3-desktop.jpg" alt="img" />
         <!--------main----->
 
         <div class="flex flex-row items-center">
-          <div class="p-4 text-4xl font-bold">The Bright Future of Web 3.0?</div>
-          <div class="flex flex-col gap-y-5">
-            We dive into the next evolution of the web that claims to put the power of the platforms
-            back into the hands of the people. But is it really fulfilling its promise?
-            <div class="border-none bg-red-500 rounded-lg px-3 py-1.5 hover:text-black;">
-              Read more
-            </div>
+          <div class="text-5xl font-bold pt-10 pr-12 pb-10">The Bright Future of Web 3.0?</div>
+          <div class="flex flex-col gap-y-8">
+            <span class="text-neutral-500"> We dive into the next evolution of the web that claims to put the power of the platforms
+            back into the hands of the people. But is it really fulfilling its promise?</span>
+            <button class="bg-red-500 font-bold text-white px-6 py-3 w-2/5 tracking-[3px] hover:bg-slate-400">
+              READ MORE
+            </button>
           </div>
         </div>
       </div>
       <!-----Block NEWS---->
-      <div class="flex flex-col border bg-gray-600 px-3 py-5">
-        <div class="text-2xl font-bold">New</div>
+      <div class="flex flex-col h-full bg-gray-900 text-white px-6 py-5 gap-y-1">
+        <div class="text-4xl font-bold text-orange-300 pb-6">New</div>
         <div class="font-bold">Hydrogen VS Electric Cars</div>
-        <div class="text-sm">Will hydrogen-fueled cars ever catch up to EVs?</div>
-        <div class="font-bold">The Downsides of AI Artistry</div>
-        <div class="text-sm">
+        <div class="text-sm text-neutral-400 pb-6">Will hydrogen-fueled cars ever catch up to EVs?</div>
+        <hr>
+        <div class="font-bold pt-6">The Downsides of AI Artistry</div>
+        <div class="text-sm text-neutral-400 pb-6">
           What are the possible adverse effects of on-demand AI image generation?
         </div>
-        <div class="font-bold">Is VC Funding Drying Up?</div>
-        <div class="text-sm">
+        <hr>
+        <div class="font-bold pt-6">Is VC Funding Drying Up?</div>
+        <div class="text-sm text-neutral-400 pb-6">
           Private funding by VC firms is down 50% YOY. We take a look at what that means.
         </div>
       </div>
     </div>
 
     <!-------LowBlockNews------->
-    <div class="flex flex-row border bg-gray-600 px-3 py-5">
-      <div class="flex flex-row border bg-gray-600 px-3 py-5">
-        <img class="w-1/2 object-contain" src="public/image-retro-pcs.jpg" alt="retro" />
+    <div class="flex flex-row px-3 py-5">
+      <div class="flex flex-row w-1/3 py-5">
+        <img class="w-2/5 object-contain pr-4" src="public/image-retro-pcs.jpg" alt="retro" />
         <div class="flex flex-col">
-          <div>01</div>
-          <div>Reviving Retro PCs</div>
-          <div class="animate-pulse">What happens when old PCs are given modern upgrades?</div>
+          <div class="text-3xl text-neutral-400 font-bold">01</div>
+          <div class="font-bold">Reviving Retro PCs</div>
+          <div class=" text-neutral-600">What happens when old PCs are given modern upgrades?</div>
         </div>
       </div>
-      <div class="flex flex-row border bg-gray-600 px-3 py-5">
-        <img class="w-1/2 object-contain" src="public/image-top-laptops.jpg" alt="retro" />
+      <div class="flex flex-row w-1/3 py-5">
+        <img class="w-2/5 object-contain pr-4" src="public/image-top-laptops.jpg" alt="retro" />
         <div class="flex flex-col">
-          <div>02</div>
-          <div>Top 10 Laptops of 2022</div>
-          <div>Our best picks for various needs and budgets.</div>
+          <div class="text-3xl text-neutral-400 font-bold">02</div>
+          <div class="font-bold">Top 10 Laptops of 2022</div>
+          <div class=" text-neutral-600">Our best picks for various needs and budgets.</div>
         </div>
       </div>
-      <div class="flex flex-row border bg-gray-600 px-3 py-5">
-        <img class="w-1/2 object-contain" src="public/image-gaming-growth.jpg" alt="retro" />
+      <div class="flex flex-row w-1/3 py-5">
+        <img class="w-2/5 object-contain pr-4" src="public/image-gaming-growth.jpg" alt="retro" />
         <div class="flex flex-col">
-          <div>03</div>
-          <div>The Growth of Gaming</div>
-          <div>How the pandemic has sparked fresh opportunities.</div>
+          <div class="text-3xl text-neutral-400 font-bold">03</div>
+          <div class="font-bold">The Growth of Gaming</div>
+          <div class=" text-neutral-600">How the pandemic has sparked fresh opportunities.</div>
         </div>
       </div>
     </div>
