--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     >
       <div class="flex flex-col relative min-w-[377px] bg-white p-6 rounded-2xl gap-y-4">
         <div class="flex flex-row">
-          <span class="text-xl font-bold">Create task</span>
+          <span class="text-xl font-bold" data-id="title">Create task</span>
           <button class="absolute top-4 right-4" data-id="btnCloseCreateTaskPopup">
             <i
               class="i-material-symbols-cancel-outline block text-neutral-400 hover:text-neutral-800 text-2xl"
@@ -131,13 +131,13 @@
               </div>
             </div>
             <div class="flex flex-row pt-2">
-              <div class="flex flex-col justify-start w-full gap-y-4 justify-between">
+              <div class="flex flex-col w-full gap-y-4 justify-between">
                 <div
                   id="templateTask"
                   class="flex flex-row shadow rounded-lg px-3 py-3 bg-neutral-50 border-1 border-neutral-100"
                 >
-                  <div class="flex flex-col w-full gap-y-3">
-                    <span data-id="templateTaskTitle" class="font-bold">Layout Design</span>
+                  <div class="flex flex-col w-full gap-y-3 pointer-events-none">
+                    <span data-id="templateTaskTitle" class="font-bold">None</span>
                     <div class="flex flex-row justify-between">
                       <div class="flex flex-row gap-x-2">
                         <div
